# x_make_gitignore_sync_x

./: README.MD  README.md_bak  __init__.py  pyproject.toml  pyrightconfig.json  sync.py  x_cls_make_gitignore_sync_x.py
scripts/: run_gitignore_sync.ps1
tests/: test_sync.py
