[project]
name = "x_make_gitignore_sync_x"
version = "0.1.0"
description = "Synchronise a shared .gitignore template across workspace repositories."
requires-python = ">=3.11"
readme = "README.MD"
license = {text = "Proprietary"}
dependencies = []

[project.scripts]
z-make-gitignore-sync = "x_make_gitignore_sync_x.sync:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "COM812", "ISC001"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unreachable = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
show_error_codes = true
no_warn_unused_configs = true
